Task 4 complete: 10 of 10 tests passing

--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -20,7 +20,7 @@
                 <p th:text="${'Name: ' + job.name}"></p>
                 <p>
                     Employer:
-                    <a th:href="@{'/employers/view/' + ${job.employer.id}}" th:text="${job.employer.name}"></a>
+                    <a th:href="@{'/employers/view/' + ${employer.id}}" th:text="${employer.name}"></a>
                 </p>
                 <p>
                     Skills:
